[tool.poetry]
name = "kams"
version = "0.1.0"
description = ""
authors = ["GameDungeon <gamedungeon@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
pathlib = "^1.0.1"
click-default-group = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
